--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "type":"module",
   "author": "Dharani I S",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "body-parser": "^1.20.3",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2"
